--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -35,7 +35,8 @@
           }
         </mat-menu>
         
-        <!-- Menú desplegable de exploración -->
+        <!-- Menú desplegable de exploración (oculto temporalmente) -->
+        <!-- 
         <button mat-button [matMenuTriggerFor]="exploreMenu" class="dropdown-button">
           <mat-icon>explore</mat-icon>
           <span>{{ 'common.exploreMovies' | translate }}</span>
@@ -51,6 +52,7 @@
             </a>
           }
         </mat-menu>
+        -->
       </div>
       
       <div class="actions-container">
@@ -117,7 +119,8 @@
         }
       </div>
       
-      <!-- Categoría de exploración en móvil -->
+      <!-- Categoría de exploración en móvil (oculto temporalmente) -->
+      <!-- 
       <div class="mobile-category">
         <div class="mobile-category-header">
           <mat-icon>explore</mat-icon>
@@ -134,6 +137,7 @@
           </a>
         }
       </div>
+      -->
     </div>
   </div>
   
