--- a/src/app/modules/movies/movie-detail/movie-detail.component.scss
+++ b/src/app/modules/movies/movie-detail/movie-detail.component.scss
@@ -1,6 +1,6 @@
 .movie-detail-container {
   min-height: 100vh;
-  background-color: var(--dark-bg);
+  background-color: transparent; /* Cambiado a transparente para mostrar el fondo */
   color: var(--light-text);
 }
 
