--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<!-- Overlay para el fondo -->
+<div class="app-background-overlay"></div>
+
 <app-navbar></app-navbar>
 
 <main class="main-content">
