--- a/src/app/modules/movies/movie-category/movie-category.component.scss
+++ b/src/app/modules/movies/movie-category/movie-category.component.scss
@@ -1,7 +1,7 @@
 .category-container {
   min-height: calc(100vh - 64px);
   padding: 30px 0;
-  background-color: var(--dark-bg);
+  background-color: transparent; /* Cambiado a transparente para mostrar el fondo */
   color: var(--light-text);
 }
 
