estilo ver todas home

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -49,8 +49,8 @@
     <section class="movies-section">
       <div class="section-header">
         <h2 class="section-title">Películas Populares</h2>
-        <a mat-button color="primary" routerLink="/movies/popular">
-          Ver todas
+        <a mat-button routerLink="/movies/popular">
+          <span>Ver todas</span>
           <mat-icon>chevron_right</mat-icon>
         </a>
       </div>
@@ -76,8 +76,8 @@
     <section class="movies-section">
       <div class="section-header">
         <h2 class="section-title">Mejor Valoradas</h2>
-        <a mat-button color="primary" routerLink="/movies/top-rated">
-          Ver todas
+        <a mat-button routerLink="/movies/top-rated">
+          <span>Ver todas</span>
           <mat-icon>chevron_right</mat-icon>
         </a>
       </div>
@@ -103,8 +103,8 @@
     <section class="movies-section">
       <div class="section-header">
         <h2 class="section-title">Próximos Estrenos</h2>
-        <a mat-button color="primary" routerLink="/movies/upcoming">
-          Ver todos
+        <a mat-button routerLink="/movies/upcoming">
+          <span>Ver todas</span>
           <mat-icon>chevron_right</mat-icon>
         </a>
       </div>
